--- a/manifest.json
+++ b/manifest.json
@@ -9,10 +9,11 @@
     }
 
   ],
+
   "browser_action":{
     "default_popup": "popup.html"
   },
-  "permissions":["storage","activeTab","tabs", "https://employee-webserver.herokuapp.com/", "http://*/", "https://*/"],
+  "permissions":["cookies", "storage","activeTab","tabs", "https://employee-webserver.herokuapp.com/", "http://*/", "https://*/"],
   "background":{
     "scripts":["background.js"]
   },
